# aethis-mcp

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  server.json  tsconfig.json  vitest.config.ts  vitest.integration.config.ts
.github/workflows/: ci.yml  claude-code-review.yml  publish.yml  staging-integration.yml
aethis_mcp/: __init__.py  client.py  server.py
docs/: agentic-decision-systems.md  demo-construction-insurance.md
docs/superpowers/plans/: 2026-05-18-dangerous-dogs-bsl.md
docs/superpowers/specs/: 2026-05-18-comms-act-2003-content-standards-design.md  2026-05-18-dangerous-dogs-bsl-design.md
scripts/qa/: emit-run-record.mjs
src/: client.ts  credentials.ts  index.ts  version-check.ts
tests/: client.test.ts  credentials.test.ts  drift.test.ts  index.test.ts  server.test.ts  test_authoring_tools.py  test_tools.py  tool-endpoint-map.ts  version-check.test.ts
tests/helpers/: openapi.ts  zodIntrospect.ts
tests/integration/: mint.ts  staging-integration.test.ts
