[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aethis-mcp"
version = "0.1.0"
description = "MCP server for the Aethis developer API — eligibility checks via Claude, Cursor, Windsurf"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0,<4",
    "httpx>=0.27,<1",
]

[project.scripts]
aethis-mcp = "aethis_mcp.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
