[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aethis-mcp"
version = "0.1.0"
description = "MCP server for the Aethis developer API — eligibility checks via Claude, Cursor, Windsurf"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Aethis", email = "eng@aethis.ai" },
]
keywords = ["mcp", "eligibility", "rules-engine", "compliance", "aethis", "llm-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastmcp>=2.0,<4",
    "httpx>=0.27,<1",
]

[project.urls]
Homepage = "https://aethis.ai"
Repository = "https://github.com/aethis-ai/aethis-mcp"
Issues = "https://github.com/aethis-ai/aethis-mcp/issues"

[project.scripts]
aethis-mcp = "aethis_mcp.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
